--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -25,7 +25,7 @@
       <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script>
       <script src="{{STATIC_URL}}media/bootstrap/js/npm.js"></script>
       <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-      <script src="{{STATIC_URL}}js/showandhide.js"></script>
+      <script src="{{STATIC_URL}}js/loginSignUp.js"></script>
     <!-- IMPORTANTE PARA CAMBIO DE BACKGROUND -->
       <script>
 
