--- a/skyfolk/static/css/materialize.css
+++ b/skyfolk/static/css/materialize.css
@@ -1997,12 +1997,12 @@ ul {
 
 .clearfix {
   clear: both; }
-
+/*
 .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
-
+*/
 .z-depth-1-half, .btn:hover, .btn-large:hover, .btn-floating:hover {
   -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
@@ -5003,7 +5003,7 @@ span.badge {
         margin-left: 91.66667%; }
       .row .col.offset-l12 {
         margin-left: 100%; } }
-
+/*
 nav {
   color: #fff;
   background-color: #ee6e73;
@@ -5115,7 +5115,7 @@ nav {
     line-height: 64px; }
   .navbar-fixed {
     height: 64px; } }
-
+*/
 @font-face {
   font-family: "Roboto";
   src: url("../font/roboto/Roboto-Thin.woff2") format("woff2"), url("../font/roboto/Roboto-Thin.woff") format("woff"), url("../font/roboto/Roboto-Thin.ttf") format("truetype");
