--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -4,104 +4,55 @@
 
 {% block content %}
 
-<div class="container-search">
-<!-- BOTON PARA CREAR UN NUEVO GRUPO -->
-<a class="btn-floating btn-large waves-effect waves-light grey right"><i class="mdi-social-group-add"></i></a>
-<!-- DIV PARA LA CREACION DEL GRUPO -->
-  <div class="crear-grupo">
 
-      <div class="row">
-        <div class="col s12 m12 l12">
-          <div class="card">
-            <div class="card-image">
-              <img src="http://www.picturesforwalls.com/blackandwhite/newyork/images/brooklynarches.jpg">
-              <span class="card-title">Crear un nuevo grupo</span>
-            </div>
-            <div class="card-content">
-              <div class="row">
-                   <div class="input-field col s6">
-                  <input id="first_name" type="text" class="validate">
-                  <label for="first_name">Nombre del grupo</label>
-                </div>
-                <div class="input-field col s6">
-                  <input id="last_name" type="text" class="validate">
-                  <label for="last_name">Descripcion</label>
-                </div>
-             </div>
-            </div>
-            <div class="card-action">
-              <a class="waves-effect waves-light btn white-text text-lighten-3">Crear grupo</a>
-              <a class="waves-effect waves-light btn white-text text-lighten-3" id="cerrar_grupo">Cancelar</a>
-            </div>
-          </div>
-        </div>
-      </div>
-  </div>
 
-{% if resultSearch|length = 0 %}
 
-<div class="row">
-<div class="col s4 offset-s4">
-	   <div id="search-noelements" class="grey lighten-5 card-panel">
-       <h5 class="blue-text text-darken-2 center-align">Sin resultados</h5>
-    </div>
-  </div>
-</div>
-
-{% endif %}
- <div class="section">
-<ul>
 <div class="container">
-<div class="row" id="contenedor">
-	{% for item in resultSearch %}
-<li>
-<div class="col s4 m3 l4 z-depth-1" id="target">
- <div id="photos" clas="col s4 m3 l4">
-   <div class="col s4 m3 l4" id="cabeza">
-   {% if isFriend%}
-    <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Amigo</span>
-    {% elif item.username == request.user.username %}
-    <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Tú<span>
-    {% else %}
-    <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Usuario<span>
-    {% endif %}
-     <div id="proffile" onclick="location.href='/profile/{{item.username}}'">
-				{% if item.profile.image %}
-				   <img class="img-responsive-profile" src="{{item.profile.image.url}}">
-				{% else %}
-				   <img class="img-responsive-profile" src="{{STATIC_URL}}img/generic-avatar.png">
-				{% endif %}
-     </div>
-   </div>
-  </div>
-  <div class="col s12">
-  <ul class="informacion">
-    {% if item.first_name %}
-    <li class="nombre grey-text text-darken-2">{{item.first_name}} <br> {{item.last_name}}</li>
-    <li class="apodo blue-text text-darken-2">{{ item.username }}</li>
-    {% else %}
-    <li class="nombre grey-text text-darken-2"><br></li>
-    <li class="apodo blue-text text-darken-2">{{ item.username }}</li>
-    {% endif %}
-    <li class="estado">Feliz</li>
-    </ul>
-    </div>
-  <div class="col s12">
-  <ul class="controls z-depth-1">
-    <li class="fa fa-heart fa-2x"><i></li>
-    <li class="fa fa-reply fa-2x"></li>
-    <li class="fa fa-plus fa-2x"></li>
-  </ul>
-  </div>
-  </div>
-  </li>
-  {% endfor %}
-</div>
-</div>
-</div> <!-- Section one -->
-<br><br>
-<div class="divider"></div>
+<div class="col-lg-12 col-md-10 col-sm-12">
+  {% if resultSearch|length = 0 %}
 
+  <div class="col-sm-4">
+  	   <div id="search-noelements">
+         <h5 class="">Sin resultados</h5>
+      </div>
+    </div>
+
+  {% else %}
+  {% for item in resultSearch %}
+<div class="col-lg-3 col-md-9 col-sm-12">
+    <div class="personal-card">
+        <div class="col-lg-12">
+            <div class="header">
+                {% if item.profile.backImage %}
+                <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
+                   {% else %}
+                   <img class="back-profile-user" src="{{ STATIC_URL }}img/5.jpg">
+                {% endif %}
+                <i class="fa fa-user fa-2x like-him">
+                </i>
+                <div class="bg-user">
+                  {% if item.profile.image %}
+                        <img class="profile-user-bg" src="{{ item.profile.image.url }}">
+                    {% else %}
+                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/5.jpg">
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div class="name-friend">
+            <p>{{ item.username }}</p><br>
+                <p>{{ item.first_name }} {{item.last_name}}</p>
+            </div>
+
+        </div>
+    </div>
+</div>
+{% endfor %}
+    </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+{% endif %}
 {% endblock %}
 
 </html>
