--- a/skyfolk/static/css/welcome.css
+++ b/skyfolk/static/css/welcome.css
@@ -3,8 +3,9 @@
     margin: auto;
     max-width: 80%;
     height: 100%;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
+    background: center fixed;
 }
 
 .card-info {
