--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+	{% block title %}
     <title>¡Bienvenido a Skyfolk!</title>
+    {% endblock %}
 	<meta charset="utf-8" />
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
@@ -10,8 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
 </head>
-<body class="teal lighten-5" style="background-image: url({{STATIC_URL}}img/backgrounds/2.jpg);">
+<body class="teal lighten-5" style="background-image: url({{STATIC_URL}}img/backgrounds/5.jpg);">
     <div class="container">
+    	{% block content %}
         <div class="row">
             <div class="card-info">
             <div class="col s12 m12 l12">
@@ -21,7 +24,7 @@
                         <h5>Estamos preparando tu cuenta.</h5>
                     </div> 
                     <div class="progress">
-                        <div class="indeterminate"></div>
+                        <div class="indeterminate"> </div>
                     </div>
                 </div>
             </div>
@@ -29,6 +32,7 @@
         </div>
         <a onclick="location.href='/step1/{{request.user}}'" class="waves-effect waves-light btn right">Configurar cuenta</a>
         <a onclick="location.href='/profile/{{request.user}}'" class="waves-effect waves-light btn">Omitir</a>
+        {% endblock %}
     </div>
 
 </body>
