--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -68,5 +68,27 @@
       </div>
       </div>
     </div>
+	
+		<!-- Permite mostrar el form para enviar mensajes -->
+{% if user.is_authenticated %}
+  <div id="page-wrapper" style="display:none;">
+      <h1> </h1>
+    <div id="status">to {{ user_profile.username }}</div>
+    <form id="message-form2" action="" method="post">{% csrf_token %}
+
+      {{publicationForm.as_p}}
+      <input type="text" name="userprofileid" value="{{ user_profile.pk }}" hidden>
+      <input type="text" name="emitterid" value="{{ user.pk }}" hidden>
+        <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"> </i> Enviar</button>
+        <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
+        <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
+        <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i></button>
+        <button class="fontawesome-camera"><i class="fa fa-camera"> </i></button>
+        <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i></button>
+
+    </form>
+  </div>
+{% endif %}
+
 
 {% endblock%}
