--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-
 {% extends 'account/base_search.html' %}
 
 {% block content %}
-
-
-
-
 <div class="container">
 <div class="col-lg-12 col-md-10 col-sm-12">
   {% if resultSearch|length = 0 %}
@@ -19,7 +13,7 @@
 
   {% else %}
   {% for item in resultSearch %}
-<div class="col-lg-3 col-md-12 col-sm-12">
+<div class="col-lg-3 col-md-5 col-sm-12">
     <div class="personal-card">
         <div class="col-lg-12">
             <div class="header">
@@ -53,6 +47,28 @@
 
 </div>
 {% endif %}
-{% endblock %}
 
-</html>
+{% block messages %}
+	<!-- Permite mostrar el form para enviar mensajes -->
+{% if user.is_authenticated %}
+  <div id="page-wrapper" style="display:none;">
+      <h1> </h1>
+    <div id="status">to {{ user_profile.username }}</div>
+    <form id="message-form2" action="" method="post">{% csrf_token %}
+
+      {{publicationForm.as_p}}
+      <input type="text" name="userprofileid" value="{{ user_profile.pk }}" hidden>
+      <input type="text" name="emitterid" value="{{ user.pk }}" hidden>
+        <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"> </i> Enviar</button>
+        <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
+        <button type="button" id="close"><i class="fa fa-remove"> </i> Cerrar</button>
+        <button class="fontawesome-bullhorn"><i class="fa fa-bullhorn"> </i></button>
+        <button class="fontawesome-camera"><i class="fa fa-camera"> </i></button>
+        <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i></button>
+
+    </form>
+  </div>
+{% endif %}
+
+{% endblock %}
+{% endblock %}
