--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -16,8 +16,7 @@
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-
-
+	{% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     <script src="{{STATIC_URL}}js/jquery.min.js"></script>
     <script src="{{STATIC_URL}}js/jquery-ui.js"></script>
     <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
