--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -1,7 +1,8 @@
 {% extends 'account/base_interface.html' %}
 {% load app_filters %}
-<html>
+{% block title %} <title>Buscar contactos</title> {% endblock %}
 {% block content %}
-
+{% block messages %}
 {% endblock %}
-</html>
+{% endblock %}
+
