--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -113,25 +113,26 @@ a, a:visited {
   float: right;
   margin-right: 3px;
   top: 2px;
+    text-align: center;
   -webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow:    0px 0px 1px 0px rgba(50, 50, 50, 0.75);
   box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
 }
 .wrapper .box .zoom-pub .fa-expand {
-  text-align: center;
   color: #2E2E2E;
-  font-size: 12.5px;
-  margin: auto;
-  margin-left: 4px;
+  font-size: 0.9em;
   -webkit-transition: all .3s linear;
   -moz-transition: all .3s linear;
   transition: all .3s linear;
   cursor: pointer;
 }
 .wrapper .box .zoom-pub .fa-expand:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  transform: scale(1.1);
+	color: #1E88E5;
+}
+.wrapper .box .zoom-pub:hover {
+  -webkit-box-shadow: 0px 0px 1px 0px #1E88E5;
+  -moz-box-shadow:    0px 0px 1px 0px #1E88E5;
+  box-shadow:         0px 0px 1px 0px #1E88E5;
 }
 input[type="checkbox"] {
   opacity: 0;
