--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -85,8 +85,7 @@ function cambiopagina(){
 */
 </script>
 
-<script language="JavaScript1.2">
-<!--
+<script>
 
 window.moveTo(0,0);
 if (document.all) {
@@ -152,15 +151,16 @@ top.window.outerWidth = screen.availWidth;
     </div>
     </li>
 
-    <li class="fa fa-comment fa-lg"></li>
+    <li class="fa fa-comment fa-lg"> </li>
     <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
     <ul class="fa fa-bars fa-lg">
+    {% if user.profile.hiddenMenu == False %} <!-- Elección del usuario el menu a mostrar -->
     <li class="fa-bars-content">
     <ul>
-        <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
-        <li class="fa fa-home fa-2x" onclick="location.href='/'"></li>
-        <li class="fa fa-users fa-2x" onclick="location.href='/friends/{{ request.user }}'"></li>
-        <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"></li>
+        <li class="fa fa-paper-plane fa-2x" id="publish2"> </li>
+        <li class="fa fa-home fa-2x" onclick="location.href='/'"> </li>
+        <li class="fa fa-users fa-2x" onclick="location.href='/friends/{{ request.user }}'"> </li>
+        <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"> </li>
         {% if request.user.profile.image %}
         <li class="profile-user" onclick="location.href='/profile/{{ request.user }}'"><img src="{{request.user.profile.image.url}}"></li>
       {% else %}
@@ -168,6 +168,7 @@ top.window.outerWidth = screen.availWidth;
       {% endif %}
       </ul>
     </li>
+    {% endif %}
     </ul>
 
     {% if showPerfilButtons or user.username == user_profile.username %}
