--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -6,16 +6,295 @@
 {% block title %}
 <title>¡Bienvenido a Skyfolk! - Paso 1 ({{ newUser }})</title>
 {% endblock %}
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Paso 1 - Configuración de cuenta </title>
-		<meta name="author" content="Skyfolk" />
-
-	</head>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="es">
 	<body>
 	{% block content %}
-	
+		<div class="col s12 m12 l12 configuration">
+			<div class="col s12 m12 l12 title">
+			<h3 class="center-align">Elige tus intereses</h3>
+			</div>
+			<div class="col s12 m12 l12 body_wrapper">
+			<form>
+				<div class="row">
+			        <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-futbol-o"> </i> Deportes</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+						<p>
+						<input type="checkbox" id="check1" />
+						<label for="check1">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			     <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-globe"></i> Mundo</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check2" />
+						<label for="check2">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			     <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-play"></i> Música</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check3" />
+						<label for="check3">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			       <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-flask"></i> Ciencia</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check4" />
+						<label for="check4">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			  <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-pencil"></i> Letras</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check5" />
+						<label for="check5">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			     <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-code"></i> Tecnología</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check6" />
+						<label for="check6">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			     <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-history"></i> Historia</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check7" />
+						<label for="check7">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			     <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-cutlery"></i> Comida</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check8" />
+						<label for="check8">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			      <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-television"></i> Televisión</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check9" />
+						<label for="check9">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			       <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-car"></i> Motor</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check10" />
+						<label for="check10">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			       <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-commenting-o"></i> Conocer gente</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check11" />
+						<label for="check11">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			       <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-glass"></i> Fiestas</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+					<p>
+						<input type="checkbox" id="check12" />
+						<label for="check12">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			       <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-star"></i> De moda</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+			            <p>
+						<input type="checkbox" id="check13" />
+						<label for="check13">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			      <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-gamepad"></i> Videojuegos</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+			            <p>
+						<input type="checkbox" id="check14" />
+						<label for="check14">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+
+			   <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-camera"></i> Fotografía</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+			           <p>
+						<input type="checkbox" id="check15" />
+						<label for="check15">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+
+
+			   <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-film"></i> Cine</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+						<p>
+						<input type="checkbox" id="check16" />
+						<label for="check16">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+
+			   <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-paint-brush"></i> Arte</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+						<p>
+						<input type="checkbox" id="check17" />
+						<label for="check17">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+
+				 <div class="col s12 m5 l4">
+			          <div class="card white">
+			            <div class="card-content">
+			              <span class="card-title grey-text darken-1"><i class="fa fa-camera"></i> Fotografía</span>
+			              <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of information.
+			              I am convenient because I require little markup to use effectively.</p>
+			            </div>
+			            <div class="card-action">
+						<p>
+						<input type="checkbox" id="check18" />
+						<label for="check18">Red</label>
+						 </p>
+			            </div>
+			          </div>
+			        </div>
+			      </div>
+			      </form>
+			</div>
+		</div>
 	{% endblock %}
 	</body>
 </html>
