--- a/skyfolk/static/css/welcome.css
+++ b/skyfolk/static/css/welcome.css
@@ -12,3 +12,22 @@
     margin-top: 30%;
     text-align: center;
 }
+
+.container .configuration {
+	width: 100%;
+	height: auto
+	background-color: rgba(250, 250, 250, 0.8);
+	position: relative;
+	display: block;
+}
+
+.container .configuration .title {
+	background-color: #fff;
+	height: 30%;
+	color: #1e88e5;
+	border-bottom: 2px solid #1e88e5;
+}
+
+.container .configuration .title h3 {
+	padding: 15px;
+}
