--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	{% block title %}
-    <title>¡Bienvenido a Skyfolk!</title>
+    <title>¡Bienvenido a Skyfolk, {{ newUser }}!</title>
     {% endblock %}
 	<meta charset="utf-8" />
     <!-- Compiled and minified CSS -->
@@ -10,9 +10,13 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+    <script src="{{STATIC_URL}}js/welcome.js"></script>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body class="teal lighten-5" style="background-image: url({{STATIC_URL}}img/backgrounds/5.jpg);">
+
+
+<body class="teal lighten-5" onload="loadImage()" style="background-image: url({{STATIC_URL}}img/backgrounds/5.jpg);">
     <div class="container">
     	{% block content %}
         <div class="row">
@@ -20,8 +24,8 @@
             <div class="col s12 m12 l12">
                 <div class="card blue-grey lighten-5">
                     <div class="card-content blue-text">
-                        <h3>Bienvenido a Skyfolk.</h3>
-                        <h5>Estamos preparando tu cuenta.</h5>
+                        <h3 onclick="newUserIsOk('{{ newUser }}')">Bienvenido a Skyfolk.</h3>
+                        <h5>Vamos a preparar tu cuenta.</h5>
                     </div> 
                     <div class="progress">
                         <div class="indeterminate"> </div>
@@ -30,8 +34,8 @@
             </div>
             </div>
         </div>
-        <a onclick="location.href='/step1/{{request.user}}'" class="waves-effect waves-light btn right">Configurar cuenta</a>
-        <a onclick="location.href='/profile/{{request.user}}'" class="waves-effect waves-light btn">Omitir</a>
+        <a onclick="location.href='/step1/{{request.user}}'" class="waves-effect waves-light btn right" onload="loadButtons()">Configurar cuenta</a>
+        <a onclick="location.href='/profile/{{request.user}}'" class="waves-effect waves-light btn" onload="loadButtons()">Omitir</a>
         {% endblock %}
     </div>
 
