--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -28,8 +28,20 @@
     height: 80px;
     border-radius: 100%;
     border: 4px solid #fff;
-
+    cursor: pointer;
+    -webkit-transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    transition: all .3s ease-in;
 }
+
+.container .personal-card .header .profile-user-bg:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transition: scale(1.1);
+    transition: scale(1.1);
+    border-color: #1e88e5;
+    opacity: 1;
+}
+
 .container .personal-card .header .like-him {
     position: relative;
     margin-top: -30px;
