--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -26,9 +26,9 @@
                 </i>
                 <div class="bg-user">
                   {% if item.profile.image %}
-                        <img class="profile-user-bg" src="{{ item.profile.image.url }}">
+                        <img class="profile-user-bg" src="{{ item.profile.image.url }}" onclick="location.href='/profile/{{ item.username }}'">
                     {% else %}
-                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/5.jpg">
+                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/5.jpg" onclick="location.href='/profile/{{ item.username }}'">
                     {% endif %}
                 </div>
             </div>
