--- a/skyfolk/templates/django_messages/base.html
+++ b/skyfolk/templates/django_messages/base.html
@@ -1,5 +1,6 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/mensajes_privados.css"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -8,6 +9,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/autosize.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 </head>
 <!-- No es necesario de momento '''% extends "base.html" %''' -->
@@ -27,17 +29,15 @@
 
   {% block sidebar %}
    <nav class="grey lighten-5 vertical-nav">
-    <ul class="collection">
-        <a onclick="javascript:location.href='/'" class="grey-text collection-item btn" id="new_message">{{request.user}}</a>
+        <a onclick="javascript:location.href='/'" class="center-align" id="new_message">{{request.user}}</a>
         {% if message_list|length >= 0 %}
-        <a onclick="javascript:location.href='/messages/inbox/'" class="grey-text text-lighten-1 collection-item"><i class="mdi-content-inbox left"></i>Inbox<span class="new badge">{{ message_list|length }}</span></a>
-          {% endif %}
-        <a href="/messages/fav/" class="grey-text text-lighten-1 collection-item"><i class="mdi-action-favorite left"></i>Favorite</a>
-        <a href="/messages/outbox/" class="grey-text text-lighten-1 collection-item"><i class="mdi-content-send left"></i>Sent Email</li>
-        <a href="/messages/spam/" class="grey-text text-lighten-1 collection-item"><i class="mdi-content-drafts left"></i>Drafts<span class="badge"></span></a>
-        <a href="/messages/group/" class="grey-text text-lighten-1 collection-item"><i class="mdi-communication-forum left"></i>Conversations<span class="badge">1</span></a>
-        <a href="/messages/trash/" class="grey-text text-lighten-1 collection-item"><i class="mdi-content-remove left"></i>Trash<span class="badge"></span></a>
-      </ul>
+           <a onclick="javascript:location.href='/messages/inbox/'"><i class="mdi-content-inbox left"></i>Inbox <div class="chip">{{ message_list|length }}</div></a>
+        {% endif %}
+        <a href="/messages/fav/"><i class="mdi-action-favorite left"></i>Favorite</a>
+        <a href="/messages/outbox/"><i class="mdi-content-send left"></i>Sent Email</li>
+        <a href="/messages/spam/"><i class="mdi-content-drafts left"></i>Drafts<span class="badge"></span></a>
+        <a href="/messages/group/"><i class="mdi-communication-forum left"></i>Conversations<div class="chip">1</div></a>
+        <a href="/messages/trash/"><i class="mdi-content-remove left"></i>Trash <span class="badge"></span></a>
     </nav>
 
 
@@ -47,13 +47,11 @@
 
 
   <nav class="grey lighten-5 vertical-nav-2">
-        <ul class="collection">
-        <a href="#!" class="grey-text text-lighten-1 collection-item"><i class="mdi-content-add left"></i>Contactos ({{ friends_top12|length }})</a>
+        <a href="#!" class="center-align">Contactos ({{ friends_top12|length }})</a>
         {% for item in friends_top12 %}
-        <a href="/messages/compose/{{item.user__username}}" class="grey-text text-lighten-1 collection-item"><i class="mdi-action-account-circle left"></i>({{item.user__username}})</a>
+        <a href="/messages/compose/{{item.user__username}}"><i class="mdi-action-account-circle left"></i>({{item.user__username}})</a>
         {% endfor %}
-        <a href="#!" class="grey-text text-lighten-1 collection-item"><i class="mdi-social-group left"></i>Equipo desarrolladores<span class="badge">130</span></a>
-      </ul>
+        <a href="#!"><i class="mdi-social-group left"></i>Equipo desarrolladores <div class="chip">130</div></a>
     </nav>
 
 
