--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -62,20 +62,64 @@ body {
 }
 .vertical-nav {
   float: left;
-  width: 35vh;
+  width: 15%;
   z-index: 9999;
   margin-top: 30px;
 }
+.vertical-nav a {
+  display: block;
+  width: 100%;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  margin-top: 4px;
+  cursor: pointer;
+  color: #424242;
+  -webkit-transition: all .2s ease-in;
+  -moz-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
+.vertical-nav a:hover > .chip {
+  background-color: #1e88e5;
+}
+
+.vertical-nav a:hover {
+  color: #1e88e5;
+}
+
+.vertical-nav a i, .vertical-nav-2 a i {
+  margin-left: 17px;
+}
+
 #new_message {
-  padding: 20px 20px;
+  padding: 10px 20px;
   height: 60px;
+  text-transform: uppercase;
 }
 
 .vertical-nav-2 {
   float: right;
-  width: 35vh;
+  width: 15%;
   margin-top: 30px;
 }
+.vertical-nav-2 a {
+  display: block;
+  width: 100%;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  margin-top: 4px;
+  cursor: pointer;
+  color: #424242;
+  -webkit-transition: all .2s ease-in;
+  -moz-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
+
+.vertical-nav-2 a:hover > .chip {
+  background-color: #1e88e5;
+}
+
+.vertical-nav-2 a:hover {
+  color: #1e88e5;
+}
+
 .image-user {
 
   width: 80px;
@@ -315,4 +359,22 @@ blockquote {
     form button {
       margin-left: 30%;
     }
+}
+
+
+/* MAS VISIBILIDAD PARA LOS PLACEHOLDER'S AL COMPONER UN MENSAJE */
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color: #424242;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color: #424242;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color: #424242;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: 424242;
 }
