--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -9,7 +9,7 @@
             <table class="z-depth-1 compose_table">
                 {{ form.as_table }}
             </table>
-            <button class="compose-button waves-effect waves-light btn" type="submit" value="{% trans "Send" %} &raquo;"/>Enviar</button>
+            <button class="compose-button waves-effect waves-light btn" type="submit" value="{% trans "Send" %} &raquo;">Enviar</button>
             </form>
 
         </div>
